Fix for hero slider controls not working (z-index). Made start page hero height higher, and fixed width issue (200%?) on mobile.

--- a/assets/source/sass/layout/_header.scss
+++ b/assets/source/sass/layout/_header.scss
@@ -203,6 +203,8 @@
 
 // Mobile header / desktop content header
 .c-header--primary {
+    position: relative;
+    z-index: 1;
 
     // todo: Discuss the maxwidth of this section
     .c-header__row {
