--- a/assets/source/sass/layout/_modules.scss
+++ b/assets/source/sass/layout/_modules.scss
@@ -99,7 +99,6 @@
     // Desktop
     @media screen and #{$screen-md-up} {
         margin-top: -117px;
-        z-index: -1;
 
         .modularity-mod-image,
         .modularity-mod-slider {
